; ModuleID = '/home/carl/AnghaBench/openssl/apps/lib/extr_app_rand.c_app_RAND_load_conf.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/lib/extr_app_rand.c_app_RAND_load_conf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"RANDFILE\00", align 1
@bio_err = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [24 x i8] c"Can't load %s into RNG\0A\00", align 1
@save_rand_file = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @app_RAND_load_conf(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i8* @NCONF_get_string(i32* %6, i8* %7, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  store i8* %8, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = icmp eq i8* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = call i32 (...) @ERR_clear_error()
  br label %29

13:                                               ; preds = %2
  %14 = load i8*, i8** %5, align 8
  %15 = call i64 @RAND_load_file(i8* %14, i32 -1)
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %13
  %18 = load i32, i32* @bio_err, align 4
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @BIO_printf(i32 %18, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i8* %19)
  %21 = load i32, i32* @bio_err, align 4
  %22 = call i32 @ERR_print_errors(i32 %21)
  br label %23

23:                                               ; preds = %17, %13
  %24 = load i32*, i32** @save_rand_file, align 8
  %25 = icmp eq i32* %24, null
  br i1 %25, label %26, label %29

26:                                               ; preds = %23
  %27 = load i8*, i8** %5, align 8
  %28 = call i32* @OPENSSL_strdup(i8* %27)
  store i32* %28, i32** @save_rand_file, align 8
  br label %29

29:                                               ; preds = %11, %26, %23
  ret void
}

declare dso_local i8* @NCONF_get_string(i32*, i8*, i8*) #1

declare dso_local i32 @ERR_clear_error(...) #1

declare dso_local i64 @RAND_load_file(i8*, i32) #1

declare dso_local i32 @BIO_printf(i32, i8*, i8*) #1

declare dso_local i32 @ERR_print_errors(i32) #1

declare dso_local i32* @OPENSSL_strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
